--- a/boilerplate/capability/bigData.html
+++ b/boilerplate/capability/bigData.html
@@ -11,12 +11,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
-        <link rel="stylesheet" href="../../css/bootstrap.min.css">
-        <link rel="stylesheet" href="../../css/bootstrap-theme.min.css">
-        <link rel="stylesheet" href="../../css/font-awesome.min.css">
+        <link rel="stylesheet" href="../css/bootstrap.min.css">
+        <link rel="stylesheet" href="../css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="../css/font-awesome.min.css">
         <link href="http://fonts.googleapis.com/css?family=Open+Sans|Roboto|Roboto+Condensed" rel="stylesheet">
-        <link rel="stylesheet" href="../../css/main.css">
-        <script src="../../js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+        <link rel="stylesheet" href="../css/main.css">
+        <script src="../js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
     </head>
     <body>
       <!--[if lt IE 8]>
@@ -31,7 +31,7 @@
                           <span class="icon-bar"></span>
                           <span class="icon-bar"></span>
                       </button>
-                      <a class="navbar-brand" href="#"><img src="../../img/attainx-logo.jpg" alt="Attanix Logo"/></a>
+                      <a class="navbar-brand" href="#"><img src="../img/attainx-logo.jpg" alt="Attanix Logo"/></a>
                   </div>
                   <div class="collapse navbar-collapse">
                       <ul class="nav navbar-nav  navbar-right">
@@ -96,7 +96,7 @@
 				<div class="row">
 					<div class="col-md-9">
 					    <div class="featured-image">
-					        <a href="#"><img src="../../img/adobe-stock/big-data-main-87909563.jpg" class="img-responsive" alt="featured-image" /></a>
+					        <a href="#"><img src="../img/adobe-stock/big-data-main-87909563.jpg" class="img-responsive" alt="featured-image" /></a>
 					    </div>
 						<p>Big Data has become the latest means for obtaining insight into your customers and finding new ways to compete in the marketplace as comparing Big Data solutions to choose the best one is no trivial task, and once you commit, changing course becomes very difficult and expensive.</P><P>
 						AttainX Big Data consultants make data science serve the enterprises striving to harness complex data processing operations. Big data by its very definition means large data sets that it is very difficult to work with using normal database management tools and businesses are leveraging big data. Big Data technologies can process very large volumes of a variety of data sets, at high-velocity, to extract economic value.</P><P>
@@ -138,22 +138,22 @@
 				<h2 class="section-heading certifications-heading">CERTIFICATIONS & CONTRACT VEHICLES</h2>
 				<div class="certifications">
             <div>
-             <a href="#"><img src="../../img/contract-vehicle.jpg" class="img-responsive" alt=""></a>
+             <a href="#"><img src="../img/contract-vehicle.jpg" class="img-responsive" alt=""></a>
            </div>
 					  <div>
-							<a href="#"><img src="../../img/sba-logo.png" class="img-responsive" alt=""></a>
+							<a href="#"><img src="../img/sba-logo.png" class="img-responsive" alt=""></a>
 						</div>
 						<div>
-							<a href="#"><img src="../../img/edwsob-logo.jpg" class="img-responsive" alt=""></a>
+							<a href="#"><img src="../img/edwsob-logo.jpg" class="img-responsive" alt=""></a>
 						</div>
 						<div>
-							<a href="#"><img src="../../img/wosb.jpg" class="img-responsive" alt=""></a>
+							<a href="#"><img src="../img/wosb.jpg" class="img-responsive" alt=""></a>
 						</div>
 						<div>
-							<a href="#"><img src="../../img/sdb-logo.jpg" class="img-responsive" alt=""></a>
+							<a href="#"><img src="../img/sdb-logo.jpg" class="img-responsive" alt=""></a>
 						</div>
 						<div>
-							<a href="#"><img src="../../img/swam-logo.jpg" class="img-responsive" alt=""></a>
+							<a href="#"><img src="../img/swam-logo.jpg" class="img-responsive" alt=""></a>
 						</div>
 
 				</div>
@@ -242,11 +242,11 @@
 
 initMap();
  </script>
-        <script>window.jQuery || document.write('<script src="../../js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
-        <script src="../../js/vendor/bootstrap.min.js"></script>
-        <script src="../../js/vendor/slick.min.js"></script>
-        <script src="../../js/vendor/jquery.stellar.min.js"></script>
-        <script src="../../js/main.js"></script>
+        <script>window.jQuery || document.write('<script src="../js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
+        <script src="../js/vendor/bootstrap.min.js"></script>
+        <script src="../js/vendor/slick.min.js"></script>
+        <script src="../js/vendor/jquery.stellar.min.js"></script>
+        <script src="../js/main.js"></script>
 
     </body>
 </html>
